--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
-/* *{
-  background-color: rgba(0,0,0,0.9);
-  color: aliceblue;
-} */
+.img-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
