--- a/src/styles/NavTabs.css
+++ b/src/styles/NavTabs.css
@@ -1,7 +1,7 @@
-*{
+/* *{
     background-color:black;
     
-}
+} */
 
 li{
     display: inline-block;
@@ -9,6 +9,3 @@ li{
     
 }
 
-a:hover{
-    text-decoration: none;
-}
