--- a/src/styles/NavTabs.css
+++ b/src/styles/NavTabs.css
@@ -5,7 +5,15 @@
 
 li{
     display: inline-block;
-    
-    
+     
 }
 
+@media(max-width:1023px){
+    li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+         
+    }
+     
+}
