--- a/src/styles/Icons.css
+++ b/src/styles/Icons.css
@@ -24,14 +24,19 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 10px;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 50px;
     padding: 10px;
   }
   
   .grid-container > div {
     text-align: center;
     padding: 20px 0;
-    font-size: 30px;
+    font-size: 20px;
   }
   
+  .centered-label {
+    display: flex;
+    align-items: center;
+    color: white;
+  }
